# Fine-Tune-LLM

./: .gitignore  Fine_Tune_LLM.ipynb  README.md  log_config.py  pyproject.toml  settings.py  test_model.py  train_model.py  training_data.jsonl  utils.py
cleaner/: extractor.py  models.py
