[project]
name = "ai-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "trl>=0.23.0",
    "unsloth>=2025.11.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "icecream>=2.1.8",
]
